--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -8,8 +8,8 @@
 
 
 
-    <string name="google_maps_api_key">AIzaSyA5eOUeuJ8jotmTZBCOBHRKCp-FLGDZ0KM</string> <!-- Live -->
-    <!-- <string name="google_maps_api_key">AIzaSyAdBlqKjTjDcZ78iOlsvgKvTVjXpMwvu1g</string> Dev -->
+    <!--<string name="google_maps_api_key">AIzaSyA5eOUeuJ8jotmTZBCOBHRKCp-FLGDZ0KM</string> &lt;!&ndash; Live &ndash;&gt;-->
+     <string name="google_maps_api_key">AIzaSyAdBlqKjTjDcZ78iOlsvgKvTVjXpMwvu1g</string> Dev
 
 
 	<!-- 8B:D4:A9:9A:B7:67:D4:22:D8:27:0D:A3:EE:3D:62:3B:32:30:CE:3B -->
