feature_forgot_password_phone_number: replace email with phone no. in forgot password

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -74,8 +74,9 @@
 	<string name="cancel">Cancel</string>
 
 	<string name="select_language">Select Language</string>
-
+	<string name="enter_phone_number">Enter Phone No.</string>
 	<string name="enter_email">Enter Email</string>
+
 	<string name="send_email">Send Email</string>
 
 	<string name="favorites">Favorites</string>
