--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -64,6 +64,7 @@
 	<string name="check_your_registered_email_phone_number_for_otp">Check your registered email/phone number for OTP</string>
 	<string name="enter_code">Enter Code</string>
 	<string name="done">Done</string>
+	<string name="amount">Amount</string>
 
 	<string name="no_driver_available">No Driver Available</string>
 	<string name="no_driver_available_message">Currently there are no drivers available nearby within 3km. We will look into it</string>
@@ -172,6 +173,86 @@
 
 	<string name="check_all">Check All</string>
 	<string name="uncheck_all">Uncheck All</string>
+	<string name="add_cash">Add Cash</string>
+	<string name="add_customer_cash">ADD CUSTOMER CASH</string>
+	<string name="arrived">Arrived</string>
+	<string name="accept_subsidy">Accept Subsidy</string>
+	<string name="account">Account</string>
+	<string name="accept">ACCEPT</string>
+	<string name="away_from_you">Away from you:</string>
+	<string name="cancel_ride_text">Are you sure you want to cancel ride?</string>
+	<string name="end_ride_text">Are you sure you want to end ride?</string>
+	<string name="logout_text">Are you sure you want to logout?</string>
+	<string name="customer_pickup_text">A pickup has been assigned to you. Please pick the customer.</string>
+	<string name="start_ride_text">Are you sure you want to start ride?</string>
+
+
+	<string name="battery_level_text">Battery Level must be greater than 20% to accept the ride. Plugin to a power source to continue.</string>
+	<string name="battery_level_start_text">Battery Level must be greater than 10% to start the ride. Plugin to a power source to continue.</string>
+	<string name="battery_level_arrived_text">Battery Level must be greater than 10% to to mark the ride arrived. Plugin to a power source to continue.</string>
+	<string name="back">Back</string>
+
+
+	<string name="change_phone_no_text">Changed Phone number is same as the previous one.</string>
+	<string name="local_positon_text">Could not get local position</string>
+	<string name="overall_position_text">Could not get overall position</string>
+	<string name="cash_needed_text">Cash Needed: Rs. </string>
+	<string name="convenience_charges_text">Convenience charges for customer: </string>
+	<string name="code_empty">Code can\'t be empty</string>
+	<string name="confirm_email_text">Confirm email id doesn\'t match</string>
+	<string name="choose_email_client">Choose an Email client:</string>
+	<string name="select_time_error_text">Cannot select time before current time</string>
+	<string name="call_me">CALL ME</string>
+	<string name="change_phone_no">Change phone number</string>
+	<string name="creating_game">Creating Game ...</string>
+	<string name="completed">Completed</string>
+	<string name="customer_name">Customer name: </string>
+	<string name="change">CHANGE</string>
+
+
+	<string name="km">Km</string>
+	<string name="disable_mock_location">Disable mock location first</string>
+	<string name="daily">Daily</string>
+	<string name="distance2">Distance:\n</string>
+	<string name="discount">Discount</string>
+	<string name="retry">Retry</string>
+
+	<string name="enter_new_phone_no">Enter New Phone Number</string>
+	<string name="enter_fare">ENTER FARE</string>
+	<string name="enter_otp">Enter One Time Password</string>
+	<string name="email">Email:</string>
+
+	<string name="fare1">Fare</string>
+	<string name="forgot_password_cap">FORGOT PASSWORD</string>
+	<string name="free_ride">Free Ride</string>
+	<string name="final_amount">Final Amount</string>
+	<string name="fare2">Fare:\n</string>
+	<string name="fare_details">Fare Details</string>
+
+	<string name="go_to_setting">Go to Settings</string>
+	<string name="google_pay_service_error">Google Play Services Error</string>
+	<string name="google_pay_service_error_message">Google Play services not found or outdated. Please install Google Play Services?</string>
+	<string name="go_to_playstore">Go to Play Store:</string>
+
+	<string name="help">Help</string>
+	<string name="have_arrived">Have you arrived?</string>
+
+	<string name="invite_earn">Invite &amp; Earn</string>
+	<string name="create_new_account_msg">If you would still like to create a new account</string>
+	<string name="not_recived_otp">I didn\'t receive the OTP</string>
+
+	<string name="jugnoo_cash">Jugnoo Cash</string>
+	<string name="jugnoo">Jugnoo</string>
+	<string name="jugnoo_off">Jugnoo is OFF now.</string>
+	<string name="jugnoo_cut">Jugnoo Cut</string>
+
+	<string name="loading">Loading ...</string>
+	<string name="local_position">Local position</string>
+	<string name="location_setting">Location Settings</string>
+	<string name="location_setting_enable_message">Location is not enabled. Do you want to enable it from settings menu?</string>
+	<string name="luggage_charge">Luggage Charge</string>
+	<string name="login">LOGIN</string>
+
 
 
 
