--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values-hi/strings.xml
@@ -7,22 +7,6 @@
 
 
 
-
-    <!-- <string name="google_maps_api_key">AIzaSyA5eOUeuJ8jotmTZBCOBHRKCp-FLGDZ0KM</string> Live -->
-    <string name="google_maps_api_key">AIzaSyBsdXoSFcTy5YAIJmpkoIeJ_7peuH1QOUo</string> <!-- Dev-->
-
-
-	<!-- 8B:D4:A9:9A:B7:67:D4:22:D8:27:0D:A3:EE:3D:62:3B:32:30:CE:3B -->
-
-    <string name="google_maps_browser_key">AIzaSyAPIQoWfHI2iRZkSV8jU4jT_b9Qth4vMdY</string>
-
-
-
-
-	<!-- <string name="fb_app_id">782131025144439</string> -->
-	<string name="fb_app_id">782131025144439</string>
-
-
 	<string name="language_english_text">English</string>
 	<string name="language_hindi_text">हिंदी</string>
 
@@ -171,9 +155,6 @@
 	<string name="check_internet_message">Check your internet connection.</string>
 
 
-
-
-
 	<string name="check_all">Check All</string>
 	<string name="uncheck_all">Uncheck All</string>
 	<string name="add_cash">Add Cash</string>
@@ -189,10 +170,12 @@
 	<string name="customer_pickup_text">A pickup has been assigned to you. Please pick the customer.</string>
 	<string name="start_ride_text">Are you sure you want to start ride?</string>
 
+
 	<string name="battery_level_text">Battery Level must be greater than 20% to accept the ride. Plugin to a power source to continue.</string>
 	<string name="battery_level_start_text">Battery Level must be greater than 10% to start the ride. Plugin to a power source to continue.</string>
 	<string name="battery_level_arrived_text">Battery Level must be greater than 10% to to mark the ride arrived. Plugin to a power source to continue.</string>
 	<string name="back">Back</string>
+
 
 	<string name="change_phone_no_text">Changed Phone number is same as the previous one.</string>
 	<string name="local_positon_text">Could not get local position</string>
@@ -209,6 +192,7 @@
 	<string name="completed">Completed</string>
 	<string name="customer_name">Customer name: </string>
 	<string name="change">CHANGE</string>
+
 
 	<string name="km">Km</string>
 	<string name="disable_mock_location">Disable mock location first</string>
@@ -243,7 +227,7 @@
 
 	<string name="jugnoo_cash">Jugnoo Cash</string>
 	<string name="jugnoo">Jugnoo</string>
-	<string name="jugnoo_off">Jugnoo is OFF now.</string>
+	<string name="jugnoo_off">जुगनू अब बंद है.</string>
 	<string name="jugnoo_cut">Jugnoo Cut</string>
 
 	<string name="loading">Loading ...</string>
@@ -304,84 +288,6 @@
 	<string name="please_login_from_these_accounts">Please login through one of these accounts</string>
 	<string name="please_contact_customer_care">Please contact our customer care</string>
 	<string name="paid_cash">Paid in Cash</string>
-
-	<string name="ride_id">Ride ID</string>
-	<string name="rupees">Rs.</string>
-	<string name="ride_time2">Ride Time: </string>
-	<string name="rate">Rate: </string>
-	<string name="ride_in_progress_cant_logout">Ride in progress. You can logout only after the ride ends.</string>
-	<string name="rate_applied">Rate Applied</string>
-	<string name="register">REGISTER</string>
-	<string name="request_registration">REQUEST REGISTRATION</string>
-	<string name="reg_info">Registration Information</string>
-	<string name="ride_details">Ride Details</string>
-	<string name="ride_fare">Ride Fare</string>
-
-	<string name="can_not_calculated_distance">Sorry, we could not calculate your distance right now</string>
-	<string name="set">SET</string>
-	<string name="SUBMIT">SUBMIT</string>
-	<string name="super_driver">SUPER DRIVERS</string>
-	<string name="sharing_rides">Sharing Rides</string>
-	<string name="sharing_on">Sharing ON</string>
-	<string name="SIGN_UP">SIGN UP</string>
-	<string name="submit_request">SUBMIT REQUEST</string>
-	<string name="status">Status</string>
-
-	<string name="total_time">Total Time</string>
-	<string name="min">min</string>
-	<string name="app_need_active_gps">The app needs active GPS connection. Enable it from Settings.</string>
-	<string name="app_needs_network_time">The app needs Network Provided Time to be enabled. Enable it from Settings.</string>
-	<string name="take">Take</string>
-	<string name="req_accepted_by_other_driver">This request has been accepted by other driver</string>
-	<string name="amount_entered">The amount entered is</string>
-	<string name="time">Time</string>
-	<string name="jugnoo_ride_over">The Jugnoo ride is over.</string>
-	<string name="today">Today</string>
-	<string name="this_month">This Month</string>
-	<string name="title">Title</string>
-	<string name="two_account_on_device">Two accounts have already been created on this device</string>
-	<string name="total_fare">Total Fare</string>
-
-	<string name="updating">Updating ...</string>
-	<string name="user_cancel_request">User has canceled the request</string>
-
-	<string name="verification">VERIFICATION</string>
-	<string name="verify_me">VERIFY ME</string>
-
-	<string name="waiting_for_location">Waiting for location...</string>
-	<string name="wait">Wait</string>
-	<string name="whatsapp_not_installed">WhatsApp not Installed</string>
-	<string name="weekly">Weekly</string>
-	<string name="will_revert_you">We will revert to you soon</string>
-
-	<string name="cannot_add_less_than">You cannot add amount less than \n Rs.</string>
-	<string name="your_position">Your Position in</string>
-	<string name="your_overall_position">Your Overall Position</string>
-	<string name="got_new_request">You have got a new request.</string>
-	<string name="present_near_customer_location">You must be present near the customer pickup location to mark ride arrived.</string>
-	<string name="present_near_customer_location_to_start">You must be present near the customer pickup location to start ride.</string>
-	<string name="You_have_already_created">You have already created</string>
-	<string name="reason_to_create_new_account">accounts from this device. Please explain the reason for creating a new account.</string>
-	<string name="your_referral_code">Your Referral Code is</string>
-
-	<string name="tap_to_retry">Tap to retry</string>
-	<string name="error_occured_tap_to_retry">Some error occurred. Tap to retry</string>
-	<string name="no_missed_rides">No missed rides currently</string>
-	<string name="no_internet_tap_to_retry">No Internet connection. Tap to retry</string>
-	<string name="no_rides">No rides currently</string>
-	<string name="pickup_location">Your Pickup Location</string>
-	<string name="money_to_pay">Money to pay: Rs.</string>
-	<string name="start_ride_loc">start ride location</string>
-
-	<string name="sec_left">sec left</string>
-	<string name="km_away">km away</string>
-	<string name="m_away">m away</string>
-	<string name="some_error_occured">Some error has occurred</string>
-	<string name="take_cash">Take Cash</string>
-	<!--<string name="weekly">Weekly</string>-->
-	<!--<string name="weekly">Weekly</string>-->
-
-
 
 
 	<string-array name="CountryCodes" >
