--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -173,6 +173,17 @@
 	<string name="check_all">Check All</string>
 	<string name="uncheck_all">Uncheck All</string>
 
+	<string name="name">Name</string>
+	<string name="driver_id">Driver ID:</string>
+	<string name="rank">Rank:</string>
+	<string name="monthly">Monthly</string>
+	<string name="earnings">Earnings</string>
+	<string name="rides_taken">Rides Taken</string>
+	<string name="rides_missed">Rides Missed</string>
+	<string name="rides_cancelled">Rides Cancelled</string>
+	<string name="online_hours">Online Hours</string>
+
+
 
 
 
