--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -177,7 +177,7 @@
 	<string name="driver_id">Driver ID:</string>
 	<string name="rank_city">Rank City:</string>
 	<string name="rank_overall">Rank Overall:</string>
-	<string name="monthly">Monthly</string>
+	<string name="monthly">Monthly Score</string>
 	<string name="earnings">Earnings</string>
 	<string name="rides_taken">Rides Taken</string>
 	<string name="rides_missed">Rides Missed</string>
