merge_cancel_ride_profile_online_hrs: driver profile screen UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -190,6 +190,9 @@
 	<string name="Customer_asked_to_cancel">Customer asked to cancel the ride</string>
 	<string name="Not_able_to_contact_customer">Not able to contact customer</string>
 	<string name="Customer_behavior">Customer\'s bad behavior</string>
+	<string name="profile">Profile</string>
+
+	Profile
 
 
 
