UIChanges_remove_logout_fareDetails_help: help replaced with call us, logout and fare details removed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -194,6 +194,8 @@
 	<string name="Customer_behavior">Customer\'s bad behavior</string>
 	<string name="profile">Profile</string>
 	<string name="Duty_Hours">Duty Hours:</string>
+	<string name="call_us">Call Us</string>
+
 
 
 
