--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -196,13 +196,8 @@
 	<string name="profile">Profile</string>
 	<string name="Duty_Hours">Duty Hours:</string>
 	<string name="call_us">Call Us</string>
-
-
-
-
-
-
-
+	<string name="Edit_profile"><u>Edit Profile</u></string>
+	<string name="INFO">INFO</string>
 
 
 	<string-array name="CountryCodes" >
