--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -201,6 +201,8 @@
 	<string name="click_for_direction">Click here for Directions</string>
 	<string name="time_left">Time left :</string>
 
+	<string name="battery_low_message">Battery Level must be greater than 20% to accept the ride. Plugin to a power source to continue.</string>
+
 
 	<string-array name="CountryCodes" >
 <item>93,AF</item>
