--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -227,6 +227,9 @@
 	<string name="paytm_recharge">PAYTM RECHARGE</string>
 	<string name="Confirm">Confirm</string>
 	<string name="Paytm_recharge">Paytm Recharge</string>
+	<string name="destination">DESTINATIONS</string>
+	<string name="destination_selection">Please select destination where you can go right now
+	</string>
 
 
 	<string-array name="CountryCodes" >
