feature_login_using_phone_no: login using otp fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -228,7 +228,7 @@
 	<string name="Confirm">Confirm</string>
 	<string name="Paytm_recharge">Paytm Recharge</string>
 	<string name="phone_number_or_email">Phone No. or Email</string>
-	<string name="nl_otp_waiting_to_detect_otp">\"Waiting to detect OTP Automaticaly\"</string>
+	<string name="nl_otp_waiting_to_detect_otp">Waiting to Automatically detect OTP</string>
 
 
 	<string-array name="CountryCodes" >
