--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -232,6 +232,26 @@
 	<string name="battery_low_message">Battery Level must be greater than 20% to accept the ride. Plugin to a power source to continue.</string>
 	<string name="destination">DESTINATIONS</string>
 	<string name="destination_selection">Please select destination where you can go right now</string>
+	<string name="Payments">Payments</string>
+	<string name="Today">Today</string>
+	<string name="Last_week">Last Week</string>
+	<string name="Last_month">Last Month</string>
+	<string name="upcoming_invoice">Upcoming Invoice</string>
+	<string name="current_invoice">Current Invoice</string>
+	<string name="Outstanding_amnt">Outstanding Amount</string>
+	<string name="jugnoo_cmsn">Jugnoo Commission</string>
+	<string name="Manual_adjustment">Manual Adjustment</string>
+	<string name="referral_amount">Referral Amount</string>
+	<string name="cancel_subsidy">Cancel Subsidy</string>
+	<string name="phone_deduction">Phone Deduction</string>
+	<string name="paid_by_jugnoo">Paid By Jugnoo</string>
+	<string name="paid_by_customer">Paid By Customer</string>
+	<string name="paid_using_customer">Paid Using Customer</string>
+	<string name="acc_credited">Account Credited With</string>
+	<string name="last_invoice">Last Invoice</string>
+	<string name="last_invoice_details">Last Payment Details</string>
+	<string name="last_payments">Last Payments</string>
+	<string name="upcoming_payment_due_date">Upcoming Payment On :</string>
 
 
 	<string-array name="CountryCodes" >
