feature_driver_payments: date reformating and UI changes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -245,8 +245,8 @@
 	<string name="cancel_subsidy">Cancel Subsidy</string>
 	<string name="phone_deduction">Phone Deduction</string>
 	<string name="paid_by_jugnoo">Paid By Jugnoo</string>
-	<string name="paid_by_customer">Paid By Customer</string>
-	<string name="paid_using_customer">Paid Using Customer</string>
+	<string name="paid_by_customer">Paid In Cash</string>
+	<string name="paid_using_wallet">Paid Using Wallet</string>
 	<string name="acc_credited">Amount Credited</string>
 	<string name="last_invoice">Last Invoice</string>
 	<string name="last_invoice_details">Last Payment On :</string>
