--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -232,6 +232,7 @@
 	<string name="battery_low_message">Battery Level must be greater than 20% to accept the ride. Plugin to a power source to continue.</string>
 	<string name="destination">DESTINATIONS</string>
 	<string name="destination_selection">Please select destination where you can go right now</string>
+	<string name="terms">Terms</string>
 
 
 	<string-array name="CountryCodes" >
