feature_driver_payments: paytm cash added to invoice details

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -252,6 +252,7 @@
 	<string name="last_invoice_details">Last Payment On :</string>
 	<string name="last_payments">Last Payments</string>
 	<string name="upcoming_payment_due_date">Upcoming Payment On :</string>
+	<string name="cash_via_paytm">Cash Via Paytm</string>
 
 
 	<string-array name="CountryCodes" >
