feature_driver_bank_details: UI fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -234,8 +234,10 @@
 	<string name="destination_selection">Please select destination where you can go right now</string>
 	<string name="terms">Terms</string>
 	<string name="bank_details">Bank Details</string>
-	<string name="acc_no">Acc No.</string>
-	<string name="ifsc_code">IFSC Code</string>
+	<string name="acc_no">Acc No. :</string>
+	<string name="ifsc_code">IFSC :</string>
+	<string name="bank_name">Bank Name :</string>
+	<string name="bank_loc">Bank Location :</string>
 
 
 	<string-array name="CountryCodes" >
