feature_fetch_notification_using_api: logic to save notifications created

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/strings.xml
@@ -259,6 +259,7 @@
 	<string name="ifsc_code">IFSC :</string>
 	<string name="bank_name">Bank Name :</string>
 	<string name="bank_loc">Bank Location :</string>
+	<string name="show_more">Show more</string>
 
 
 	<string-array name="CountryCodes" >
